--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
     <ol>
         <li><a href="main.html" target="_blank">Главная</a></li>
 
+        <li><a href="cases.html" target="_blank">Кейсы</a></li>
+
         <li><a href="contacts.html" target="_blank">Контакты</a></li>
 
         <li><a href="terms.html" target="_blank">Пользовательское соглашение</a></li>
