--- a/src/main.html
+++ b/src/main.html
@@ -30,6 +30,110 @@
 
     <div class="page-content">
         <div class="container">
+            <div class="hero">
+                <h1>Помогаем бизнесу перейти <span class="main-color">в онлайн</span></h1>
+                <div class="hero__buttons">
+                    <button class="hero__button is-active" type="button">Digital-стратегии</button>
+                    <button class="hero__button" type="button">Дизайн</button>
+                    <button class="hero__button" type="button">Аналитика</button>
+                    <button class="hero__button" type="button">Реклама</button>
+                    <button class="hero__button" type="button">Продвижение</button>
+                </div>
+                <div class="hero__image">
+                    <img src="images/content/hero/img_1.jpg" srcset="images/content/hero/img_1@2x.jpg 2x" alt="alt">
+                </div>
+                <div class="hero__logos">
+                    <img src="images/content/logos/bitrix.jpg" srcset="images/content/logos/bitrix@2x.jpg 2x" alt="Bitrix">
+                    <img src="images/content/logos/google-ads.jpg" srcset="images/content/logos/google-ads@2x.jpg 2x" alt="Google Ads">
+                    <img src="images/content/logos/ya-direct.jpg" srcset="images/content/logos/ya-direct@2x.jpg 2x" alt="Yandex Direct">
+                    <img src="images/content/logos/power-bi_logo.jpg" srcset="images/content/logos/power-bi_logo@2x.jpg 2x" alt="Power BI">
+                    <img src="images/content/logos/data_studio.jpg" srcset="images/content/logos/data_studio@2x.jpg 2x" alt="Data Studio">
+                </div>
+            </div>
+
+            <div class="services">
+                <h2>Услуги</h2>
+                <div class="services__list">
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title is-active" tabindex="0"><span class="service__num">01</span> <span class="service__title-text">Технический аудит</span></h3>
+                            </div>
+                            <div class="service__text-block" style="display: block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">02</span> <span class="service__title-text">Дизайн и разработка сайта</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">03</span> <span class="service__title-text">Настройка сквозной аналитики</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">04</span> <span class="service__title-text">Повышение качества рекламы</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">05</span> <span class="service__title-text">Контент-маркетинг</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">06</span> <span class="service__title-text">Комплексное продвижение для&nbsp;бизнеса</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <div class="service__inner">
+                            <div class="service__title-block">
+                                <h3 class="js-service-toggle service__title" tabindex="0"><span class="service__num">07</span> <span class="service__title-text">Разработка виджетов amoCRM</span></h3>
+                            </div>
+                            <div class="service__text-block">
+                                <p>Определения эффективности работы сайта или его отдельных частей. Выявление ошибок в коде, ускорение загрузки страниц, проверка форм отправки и многое другое.</p>
+                                <p><a class="button button--type_1" href="#">Заказать услугу</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             //= template/feedback-form.html
         </div>
     </div>
@@ -37,6 +141,7 @@
     //= template/footer.html
 
     //= template/scripts.html
+    <script src="js/services.js"></script>
 </body>
 
 </html>
