--- a/src/case.html
+++ b/src/case.html
@@ -37,7 +37,7 @@
                     <p>CMS 1С-Битрикс, интеграция сайта с 1С, комплексная маркетинговая поддержка.</p>
                 </div>
 
-                <p class="article-detail__link"><a class="link" href="https://goldunionhouse.com/">https://goldunionhouse.com/</a></p>
+                <p class="article-detail__link"><a class="link" href="https://goldunionhouse.com/"><span>https://goldunionhouse.com/</span></a></p>
 
                 <div class="article-detail__banner">
                     <picture>
