--- a/src/cases.html
+++ b/src/cases.html
@@ -54,7 +54,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_1.jpg, images/content/cases/img_1@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_1_mob.jpg" srcset="images/content/cases/img_1_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_1_mob.jpg" srcset="images/content/cases/img_1_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">Gold Union House</h2>
                             </a>
@@ -66,7 +66,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_2.jpg, images/content/cases/img_2@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_2_mob.jpg" srcset="images/content/cases/img_2_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_2_mob.jpg" srcset="images/content/cases/img_2_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">ДвериШоп</h2>
                             </a>
@@ -78,7 +78,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_3.jpg, images/content/cases/img_3@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_3_mob.jpg" srcset="images/content/cases/img_3_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_3_mob.jpg" srcset="images/content/cases/img_3_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">Decorum</h2>
                             </a>
@@ -90,7 +90,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_4.jpg, images/content/cases/img_4@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_4_mob.jpg" srcset="images/content/cases/img_4_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_4_mob.jpg" srcset="images/content/cases/img_4_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">X-Сlinic</h2>
                             </a>
@@ -102,7 +102,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_1.jpg, images/content/cases/img_1@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_1_mob.jpg" srcset="images/content/cases/img_1_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_1_mob.jpg" srcset="images/content/cases/img_1_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">Gold Union House</h2>
                             </a>
@@ -114,7 +114,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_2.jpg, images/content/cases/img_2@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_2_mob.jpg" srcset="images/content/cases/img_2_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_2_mob.jpg" srcset="images/content/cases/img_2_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">ДвериШоп</h2>
                             </a>
@@ -126,7 +126,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_3.jpg, images/content/cases/img_3@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_3_mob.jpg" srcset="images/content/cases/img_3_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_3_mob.jpg" srcset="images/content/cases/img_3_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">Decorum</h2>
                             </a>
@@ -138,7 +138,7 @@
                             <a class="article__link" href="case.html">
                                 <picture>
                                     <source srcset="images/content/cases/img_4.jpg, images/content/cases/img_4@2x.jpg 2x" media="(min-width: 768px)">
-                                    <img src="images/content/cases/img_4_mob.jpg" srcset="images/content/cases/img_4_mob@2x.jpg" alt="alt">
+                                    <img src="images/content/cases/img_4_mob.jpg" srcset="images/content/cases/img_4_mob@2x.jpg 2x" alt="alt">
                                 </picture>
                                 <h2 class="article__title">X-Сlinic</h2>
                             </a>
