--- a/src/cases.html
+++ b/src/cases.html
@@ -31,7 +31,7 @@
     <div class="page-content">
         <div class="container">
             <h1>Кейсы</h1>
-            <div class="text-block">
+            <div class="text-block-730">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <ul class="tags">
