--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
 
         <li><a href="solution.html" target="_blank">Решение</a></li>
 
+        <li><a href="about.html" target="_blank">Мы - VSignal</a></li>
+
         <li><a href="contacts.html" target="_blank">Контакты</a></li>
 
         <li><a href="terms.html" target="_blank">Пользовательское соглашение</a></li>
