--- a/src/main.html
+++ b/src/main.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="services">
+            <section class="services">
                 <h2>Услуги</h2>
                 <div class="services__list">
                     <div class="service">
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
 
             //= template/feedback-form.html
         </div>
