--- a/src/terms.html
+++ b/src/terms.html
@@ -30,7 +30,7 @@
 
     <div class="page-content">
         <div class="container">
-            <div class="text-block">
+            <div class="text-block-730">
                 <h1>Пользовательское соглашение</h1>
 
                 <p>
