--- a/src/case.html
+++ b/src/case.html
@@ -30,16 +30,16 @@
 
     <div class="page-content">
         <div class="container">
-            <div class="article-detail">
+            <section class="article-detail">
                 <h1>Разработка<br> и продвижение сайта</h1>
 
-                <div class="article-detail__text">
+                <div class="text-block-660">
                     <p>CMS 1С-Битрикс, интеграция сайта с 1С, комплексная маркетинговая поддержка.</p>
                 </div>
 
-                <p class="article-detail__link"><a class="link" href="https://goldunionhouse.com/"><span>https://goldunionhouse.com/</span></a></p>
+                <p class="article-detail__link-block"><a class="link" href="https://goldunionhouse.com/"><span>https://goldunionhouse.com/</span></a></p>
 
-                <div class="article-detail__banner">
+                <div class="page-banner">
                     <picture>
                         <source srcset="images/content/case/banner_desk.jpg, images/content/case/banner_desk@2x.jpg 2x" media="(min-width: 1024px)">
                         <source srcset="images/content/case/banner_tablet.jpg, images/content/case/banner_tablet@2x.jpg 2x" media="(min-width: 768px)">
@@ -49,7 +49,7 @@
 
                 <h2>Изучили тематику</h2>
 
-                <div class="article-detail__text">
+                <div class="text-block-660">
                     <p>
                         Для того, чтобы найти и предложить лучшую концепцию нового сайта, мы изучили и подробно разобрали более 30 российских и зарубежных сайтов ювелирных украшений премиум класса. Выбрали в каждом из них наиболее интересные решения
                         в интерфейсе.
@@ -59,7 +59,7 @@
                     </p>
                 </div>
 
-                <div class="article-detail__banner">
+                <div class="page-banner">
                     <picture>
                         <source srcset="images/content/case/banner_desk_2.jpg, images/content/case/banner_desk_2@2x.jpg 2x" media="(min-width: 1024px)">
                         <source srcset="images/content/case/banner_tablet_2.jpg, images/content/case/banner_tablet_2@2x.jpg 2x" media="(min-width: 768px)">
@@ -69,34 +69,34 @@
 
                 <h2>Спроектировали<br> прототип</h2>
 
-                <div class="article-detail__text">
+                <div class="text-block-660">
                     <p>При проектировании сайта решено было использовать нестандартную ассиметричную сетку. Это облегчило восприятие яркой графики на главной странице и позволило более эффективно заполнить свободное пространство.</p>
                     <p>При этом мы сохранили понятный пользовательский интерфейс в каталоге и корзине для удобства покупателей.</p>
                 </div>
 
-                <div class="article-detail__banner">
-                    <div class="js-scroller scroller">
-                        <div class="scroller__item">
-                            <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
+                <div class="scroller">
+                    <div class="js-scroller swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="images/content/case/prot_2.jpg" srcset="images/content/case/prot_2@2x.jpg 2x" alt="alt">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="images/content/case/prot_3.jpg" srcset="images/content/case/prot_3@2x.jpg 2x" alt="alt">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="images/content/case/prot_4.jpg" srcset="images/content/case/prot_4@2x.jpg 2x" alt="alt">
+                            </div>
                         </div>
-                        <div class="scroller__item">
-                            <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
-                        </div>
-                        <div class="scroller__item">
-                            <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
-                        </div>
-                        <div class="scroller__item">
-                            <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
-                        </div>
-                        <div class="scroller__item">
-                            <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
-                        </div>
+                        <div class="swiper-scrollbar"></div>
                     </div>
                 </div>
 
                 <h2>Нарисовали дизайн</h2>
 
-                <div class="article-detail__text">
+                <div class="text-block-660">
                     <p>В качестве основного референса для дизайна мы выбрали идею “современного глянцевого журнала”. Яркие и насыщенные образы на фотографиях должны были подчеркиваться строгостью в линиях и заголовках.</p>
                     <p>Цвет типографики и шрифтов был подобран от глянцево чёрного до матового и полуматового цветов.</p>
                 </div>
@@ -108,15 +108,15 @@
                     <div class="brand-colors__item" style="background-color: #D09B2B"></div>
                 </div>
 
-                <div class="article-detail__design">
-                    <div class="article-detail__design-item">
+                <div class="designs">
+                    <div class="article-detail__design-item designs__item">
                         <picture>
                             <source srcset="images/content/case/design_1_desk.jpg, images/content/case/design_1_desk@2x.jpg 2x" media="(min-width: 1024px)">
                             <source srcset="images/content/case/design_1_tablet.jpg, images/content/case/design_1_tablet@2x.jpg 2x" media="(min-width: 768px)">
                             <img src="images/content/case/design_1_mob.jpg" srcset="images/content/case/design_1_mob@2x.jpg 2x" alt="alt">
                         </picture>
                     </div>
-                    <div class="article-detail__design-item">
+                    <div class="article-detail__design-item designs__item">
                         <img src="images/content/case/design_2_mob.jpg" srcset="images/content/case/design_2_mob@2x.jpg 2x" alt="alt">
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <img src="images/content/case/bitrix.jpg" srcset="images/content/case/bitrix@2x.jpg 2x" alt="Bitrix">
                 </div>
 
-                <div class="article-detail__banner">
+                <div class="page-banner">
                     <picture>
                         <source srcset="images/content/case/banner_desk_3.jpg, images/content/case/banner_desk_3@2x.jpg 2x" media="(min-width: 1024px)">
                         <source srcset="images/content/case/banner_tablet_3.jpg, images/content/case/banner_tablet_3@2x.jpg 2x" media="(min-width: 768px)">
@@ -140,7 +140,7 @@
                     </picture>
                 </div>
 
-                <p class="article-detail__nav-block article-detail__nav-block--next">
+                <p class="article-detail__nav-block next">
                     <a class="article-detail__nav-link" href="#">
                         <span>Следующий кейс</span>
                         <svg>
@@ -148,7 +148,7 @@
                         </svg>
                     </a>
                 </p>
-            </div>
+            </section>
 
             //= template/feedback-form.html
         </div>
@@ -157,6 +157,7 @@
     //= template/footer.html
 
     //= template/scripts.html
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scroller.js"></script>
 </body>
 
