--- a/src/case.html
+++ b/src/case.html
@@ -78,16 +78,24 @@
                     <div class="js-scroller swiper-container">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
+                                <div class="scroller__image">
+                                    <img src="images/content/case/prot_1.jpg" srcset="images/content/case/prot_1@2x.jpg 2x" alt="alt">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/content/case/prot_2.jpg" srcset="images/content/case/prot_2@2x.jpg 2x" alt="alt">
+                                <div class="scroller__image">
+                                    <img src="images/content/case/prot_2.jpg" srcset="images/content/case/prot_2@2x.jpg 2x" alt="alt">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/content/case/prot_3.jpg" srcset="images/content/case/prot_3@2x.jpg 2x" alt="alt">
+                                <div class="scroller__image">
+                                    <img src="images/content/case/prot_3.jpg" srcset="images/content/case/prot_3@2x.jpg 2x" alt="alt">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/content/case/prot_4.jpg" srcset="images/content/case/prot_4@2x.jpg 2x" alt="alt">
+                                <div class="scroller__image">
+                                    <img src="images/content/case/prot_4.jpg" srcset="images/content/case/prot_4@2x.jpg 2x" alt="alt">
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-scrollbar"></div>
