--- a/src/about.html
+++ b/src/about.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="person">
-                                <picture>
+                                <picture class="person__image">
                                     <img src="images/content/about/mihail.jpg" srcset="images/content/about/mihail@2x.jpg 2x" alt="Михаил">
                                 </picture>
                                 <h2 class="person__name">Михаил</h2>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="person">
-                                <picture>
+                                <picture class="person__image">
                                     <img src="images/content/about/sergey.jpg" srcset="images/content/about/sergey@2x.jpg 2x" alt="Сергей">
                                 </picture>
                                 <h2 class="person__name">Сергей</h2>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="person">
-                                <picture>
+                                <picture class="person__image">
                                     <img src="images/content/about/janina.jpg" srcset="images/content/about/janina@2x.jpg 2x" alt="Янина">
                                 </picture>
                                 <h2 class="person__name">Янина</h2>
