--- a/src/advice.html
+++ b/src/advice.html
@@ -38,9 +38,9 @@
                 </div>
                 <div class="advice-banner__image">
                     <picture>
-                        <source srcset="images/content/advice/banner.webp, images/content/advice/banner@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
+                        <!--<source srcset="images/content/advice/banner.webp, images/content/advice/banner@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
                         <source srcset="images/content/advice/banner.png, images/content/advice/banner@2x.png 2x" media="(min-width: 768px)">
-                        <source srcset="images/content/advice/banner_mob.webp, images/content/advice/banner_mob@2x.webp 2x" type="image/webp">
+                        <!--<source srcset="images/content/advice/banner_mob.webp, images/content/advice/banner_mob@2x.webp 2x" type="image/webp">-->
                         <img src="images/content/advice/banner_mob.png" srcset="images/content/advice/banner_mob@2x.png 2x" alt="alt">
                     </picture>
                 </div>
