--- a/src/main.html
+++ b/src/main.html
@@ -33,18 +33,18 @@
             <div class="hero">
                 <div class="hero__inner">
                     <div class="hero__content">
-                        <h1>Помогаем бизнесу перейти <span class='main-color'>в&nbsp;онлайн</span></h1>
+                        <h1>Помогаем<br> бизнесу перейти <span class='main-color'>в&nbsp;онлайн</span></h1>
                         <div class="hero__buttons">
                             <button class="js-hero hero__button is-active" type="button" data-src="images/content/hero/img_1.jpg" data-srcset="images/content/hero/img_1@2x.jpg 2x"
                               data-title="Помогаем бизнесу перейти <span class='main-color'>в&nbsp;онлайн</span>">Digital-стратегии</button>
                             <button class="js-hero hero__button" type="button" data-src="images/content/hero/img_2.jpg" data-srcset="images/content/hero/img_2@2x.jpg 2x"
-                              data-title="Решаем бизнес-задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Дизайн</button>
+                              data-title="Решаем бизнес‑задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Дизайн</button>
                             <button class="js-hero hero__button" type="button" data-src="images/content/hero/img_3.jpg" data-srcset="images/content/hero/img_3@2x.jpg 2x"
-                              data-title="Решаем бизнес-задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Аналитика</button>
+                              data-title="Решаем бизнес‑задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Аналитика</button>
                             <button class="js-hero hero__button" type="button" data-src="images/content/hero/img_4.jpg" data-srcset="images/content/hero/img_4@2x.jpg 2x"
-                              data-title="Решаем бизнес-задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Реклама</button>
+                              data-title="Решаем бизнес‑задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Реклама</button>
                             <button class="js-hero hero__button" type="button" data-src="images/content/hero/img_5.jpg" data-srcset="images/content/hero/img_5@2x.jpg 2x"
-                              data-title="Решаем бизнес-задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Продвижение</button>
+                              data-title="Решаем бизнес‑задачи в&nbsp;<span class='main-color'>Digital&nbsp;среде</span>">Продвижение</button>
                         </div>
                         <div class="hero__image">
                             <img src="images/content/hero/img_1.jpg" srcset="images/content/hero/img_1@2x.jpg 2x" alt="alt">
@@ -168,9 +168,9 @@
                 </div>
                 <div class="solutions__image">
                     <picture>
-                        <source srcset="images/content/solutions/img_desk.webp, images/content/solutions/img_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
+                        <!--<source srcset="images/content/solutions/img_desk.webp, images/content/solutions/img_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
                         <source srcset="images/content/solutions/img_desk.png, images/content/solutions/img_desk@2x.png 2x" media="(min-width: 768px)">
-                        <source srcset="images/content/solutions/img_mob.webp, images/content/solutions/img_mob@2x.webp 2x" type="image/webp">
+                        <!--<source srcset="images/content/solutions/img_mob.webp, images/content/solutions/img_mob@2x.webp 2x" type="image/webp">-->
                         <img src="images/content/solutions/img_mob.png" srcset="images/content/solutions/img_mob@2x.png 2x" alt="alt">
                     </picture>
                 </div>
