--- a/src/solution.html
+++ b/src/solution.html
@@ -140,9 +140,9 @@
                     </div>
                     <div class="imaged-block__image">
                         <picture style="max-width: 440px">
-                            <source srcset="images/content/solution/img_2_desk.webp, images/content/solution/img_2_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">
+                            <!--<source srcset="images/content/solution/img_2_desk.webp, images/content/solution/img_2_desk@2x.webp 2x" media="(min-width: 768px)" type="image/webp">-->
                             <source srcset="images/content/solution/img_2_desk.png, images/content/solution/img_2_desk@2x.png 2x" media="(min-width: 768px)">
-                            <source srcset="images/content/solution/img_2_mobile.webp, images/content/solution/img_2_mobile@2x.webp 2x" type="image/webp">
+                            <!--<source srcset="images/content/solution/img_2_mobile.webp, images/content/solution/img_2_mobile@2x.webp 2x" type="image/webp">-->
                             <img src="images/content/solution/img_2_mobile.png" srcset="images/content/solution/img_2_mobile@2x.png 2x" alt="alt">
                         </picture>
                     </div>
