--- a/src/solution.html
+++ b/src/solution.html
@@ -149,11 +149,15 @@
                 </div>
 
                 <p class="article-detail__nav-block text-right">
-                    <a class="nav-link" href="#">
-                        <span>Следующее решение</span>
-                        <svg>
-                            <use xlink:href="#arrow_right"></use>
-                        </svg>
+                    <a class="nav-link" href="solutions.html">
+                        <span class="nav-link__text">Следующее решение</span>
+                        <span class="nav-link__arrow">
+                            <span>
+                                <svg>
+                                    <use xlink:href="#arrow_right"></use>
+                                </svg>
+                            </span>
+                        </span>
                     </a>
                 </p>
             </section>
